+ accessibility-issues + JS wrapped in mk-inline-js

--- a/trunk/xims/www/ximsroot/skins/2punkt0/stylesheets/content.css
+++ b/trunk/xims/www/ximsroot/skins/2punkt0/stylesheets/content.css
@@ -284,7 +284,7 @@ tr.objrow:hover td, tr.objrow:focus td{
 	font-size: 9px; 
 	background-color: #eeeeee;
 }
-#create-edit-form > div{
+#create-edit-form > div, #select-form > div , #select-form li{
 	margin-top: 10px;
 }
 #create-edit-form h1{
